MyDevOrg/src/objects/Pre_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PreEnrollment</relationshipLabel>
        <relationshipName>PreEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PNMSite__c</fullName>
        <label>PNM Site</label>
        <referenceTo>PNMSite__c</referenceTo>
        <relationshipLabel>PreEnrollment</relationshipLabel>
        <relationshipName>PreEnrollments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProviderName__c</fullName>
        <label>Provider Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>Pre Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pre Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PreEnrollment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>